--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul id="navbar__list"></ul>
     </nav>
   </header>
-  <main>html-blog-posthtml-blog-post
+  <main>html-blog-post
     <header class="main__hero">
       <h1>Landing Page </h1>
     </header>
@@ -54,7 +54,8 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-  <script src="js/app.js" type="text/javascript"></script>
+  <script src="js/app,js" type="text/javascript"></script>
+ 
 
 </body>
 </html>
